--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "OpenTelemetry auto-instrumentation for PSR-18 (HTTP Client).",
   "keywords": ["opentelemetry", "otel", "open-telemetry", "tracing", "psr18", "instrumentation"],
   "type": "library",
-  "homepage": "https://opentelemetry.io/docs/php",
+  "homepage": "https://opentelemetry.io/docs/languages/php/",
   "readme": "./README.md",
   "license": "Apache-2.0",
   "minimum-stability": "dev",
